// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Other|/stories//Dirname Example story 1 1`] = `
<button
  type="button"
>
  Story 1
</button>
`;

exports[`Storyshots Other|/stories//Dirname Example story 2 1`] = `
<button
  type="button"
>
  Story 2
</button>
`;
